--- a/轮播/text_demo/index.html
+++ b/轮播/text_demo/index.html
@@ -15,7 +15,7 @@
 	    </ul>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.js"></script>
 	<script src="index.js"></script>
 </body>
 </html>
