--- a/组件封装/solider/index.html
+++ b/组件封装/solider/index.html
@@ -102,22 +102,22 @@
     <ul class="img-ct">
       <li>
         <a href="#">
-          <img src="../轮播/img/轮播1.jpg" alt="">
+          <img src="../../轮播/img/轮播1.jpg" alt="">
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="../轮播/img/轮播2.jpg" alt="">
+          <img src="../../轮播/img/轮播2.jpg" alt="">
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="../轮播/img/轮播3.jpg" alt="">
+          <img src="../../轮播/img/轮播3.jpg" alt="">
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="../轮播/img/轮播4.jpg" alt="">
+          <img src="../../轮播/img/轮播4.jpg" alt="">
         </a>
       </li>
     </ul>
@@ -132,22 +132,22 @@
     <ul class="img-ct">
       <li>
         <a href="#">
-          <img src="../轮播/img/轮播1.jpg" alt="">
+          <img src="../../轮播/img/轮播1.jpg" alt="">
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="../轮播/img/轮播2.jpg" alt="">
+          <img src="../../轮播/img/轮播2.jpg" alt="">
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="../轮播/img/轮播3.jpg" alt="">
+          <img src="../../轮播/img/轮播3.jpg" alt="">
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="../轮播/img/轮播4.jpg" alt="">
+          <img src="../../轮播/img/轮播4.jpg" alt="">
         </a>
       </li>
     </ul>
