完成轮播效果

--- a/模块化/example/index.html
+++ b/模块化/example/index.html
@@ -27,6 +27,7 @@
   <!-- 瀑布流图片懒加载 -->
   <!-- 回到顶部 -->
   </div>
-
+  <script src="js/lab/jquery-2.0.3.min.js"></script>
+  <script src="js/mod/carousel.js"></script>
 </body>
 </html>
