--- a/模块化/example/index.html
+++ b/模块化/example/index.html
@@ -29,5 +29,6 @@
   </div>
   <script src="js/lab/jquery-2.0.3.min.js"></script>
   <script src="js/mod/carousel.js"></script>
+  <script src="js/mod/getData.js"></script>
 </body>
 </html>
