--- a/模块化/example/index.html
+++ b/模块化/example/index.html
@@ -10,14 +10,14 @@
 <body>
   <div class="example_wrap">
   <!-- 全屏轮播大图 -->
-  <div class="carousel_wrap">
-    <ul id="carousel">
+  <div class="carousel_full">
+    <ul class="carousel">
       <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/1.jpg" alt=""></li>
       <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/2.jpg" alt=""></li>
       <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/3.jpg" alt=""></li>
       <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/4.jpg" alt=""></li>
     </ul>
-    <ul id="bullet">
+    <ul class="bullet">
       <li class="active"></li>
       <li></li>
       <li></li>
