瀑布流样式及逻辑

--- a/模块化/example/index.html
+++ b/模块化/example/index.html
@@ -10,25 +10,66 @@
 <body>
   <div class="example_wrap">
   <!-- 全屏轮播大图 -->
-  <div class="carousel_full">
-    <ul class="carousel">
-      <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/1.jpg" alt=""></li>
-      <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/2.jpg" alt=""></li>
-      <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/3.jpg" alt=""></li>
-      <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/4.jpg" alt=""></li>
-    </ul>
-    <ul class="bullet">
-      <li class="active"></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  </div>
+    <!-- <div class="carousel_full">
+      <ul class="carousel">
+        <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/1.jpg" alt=""></li>
+        <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/2.jpg" alt=""></li>
+        <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/3.jpg" alt=""></li>
+        <li><img src="http://p19.qhimg.com/d/_open360/cartoonm0204/4.jpg" alt=""></li>
+      </ul>
+      <ul class="bullet">
+        <li class="active"></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div> -->
   <!-- 瀑布流图片懒加载 -->
+    <!-- <div class="picture_wall">
+      <ul class="picture_wrap">
+        <li>
+          <img src="https://lorempixel.com/400/200" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/500/200" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/700/500" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/700/300" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/400/200" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/400/500" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/500/500" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/300/200" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/600/200" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/700/300" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/500/300" alt="">
+        </li>
+        <li>
+          <img src="https://lorempixel.com/500/200" alt="">
+        </li>
+      </ul>
+    </div> -->
   <!-- 回到顶部 -->
   </div>
   <script src="js/lab/jquery-2.0.3.min.js"></script>
   <script src="js/mod/carousel.js"></script>
   <script src="js/mod/getData.js"></script>
+  <!-- <script src="js/mod/waterFull.js"></script> -->
 </body>
 </html>
