--- a/barrellayout/barrellayout.html
+++ b/barrellayout/barrellayout.html
@@ -115,6 +115,7 @@
                         $img = $(imgInfo.target);
                     $img.height(rowHeight);
                     $imgCt.append($img);
+                    console.log($imgCt);
                     $rowCt.append($imgCt);
                 });
                 $rowCt.hide().fadeIn(1000)      //淡入效果加载
