--- a/模块化/example/index.html
+++ b/模块化/example/index.html
@@ -15,18 +15,20 @@
       </ul>
       <ul class="bullet">
       </ul>
-    </div> 
+    </div>
   <!-- 瀑布流图片懒加载 -->
-    <!-- <div class="picture_wall">
+    <div class="picture_wall">
       <ul class="picture_wrap">
       </ul>
-    </div> -->
+    </div> 
   <!-- 回到顶部 -->
   </div>
   <script src="js/lab/jquery-2.0.3.min.js"></script>
-  <script src="js/mod/getData.js"></script>
   <script src="js/mod/carousel.js"></script>
+  <script src="js/mod/waterFall.js"></script>
+  <script src="js/mod/getData.js"></script>
   
-  <!-- <script src="js/mod/waterFull.js"></script> -->
+  
+  
 </body>
 </html>
