--- a/模块化/example/index.html
+++ b/模块化/example/index.html
@@ -10,17 +10,11 @@
 <body>
   <div class="example_wrap">
   <!-- 全屏轮播大图 -->
-    <!-- <div class="carousel_full">
-      <ul class="carousel">
-      </ul>
-      <ul class="bullet">
-      </ul>
-    </div> -->
-  <!-- 瀑布流图片懒加载 -->
-    <div class="picture_wall">
-      <ul class="picture_wrap">
-      </ul>
-    </div>
+    <div class="carousel_full">
+    </div> 
+  <!-- 瀑布流图片 -->
+    <ul class="picture_wrap">
+    </ul>
   <!-- 回到顶部 -->
   </div>
   <script src="js/lab/jquery-2.0.3.min.js"></script>
