--- a/模块化/example/index.html
+++ b/模块化/example/index.html
@@ -21,6 +21,7 @@
   <script src="js/mod/carousel.js"></script>
   <script src="js/mod/waterFall.js"></script>
   <script src="js/mod/getData.js"></script>
+  <script src="js/mod/scrollGet.js"></script>
   
   
   
