--- a/模块化/example/index.html
+++ b/模块化/example/index.html
@@ -22,7 +22,7 @@
   <script src="js/mod/waterFall.js"></script>
   <script src="js/mod/getData.js"></script>
   <script src="js/mod/scrollGet.js"></script>
-  
+  <script src="js/mod/goTop.js"></script>  
   
   
 </body>
