--- a/模块化/example/index.html
+++ b/模块化/example/index.html
@@ -17,13 +17,21 @@
     </ul>
   <!-- 回到顶部 -->
   </div>
-  <script src="js/lab/jquery-2.0.3.min.js"></script>
-  <script src="js/mod/carousel.js"></script>
-  <script src="js/mod/waterFall.js"></script>
-  <script src="js/mod/getData.js"></script>
+  <script  src="js/lab/require.min.js"></script>
+
+  <script>
+    requirejs.config({
+        baseUrl: 'js/lab',
+        paths: {
+            "jquery" : "./jquery-2.0.3.min",
+            app: '../app',
+            mod:'../mod'
+        }
+    });
   
-  <script src="js/mod/goTop.js"></script>  
-  
+    // 加载入口模块
+    requirejs(['app/main']);
+  </script>
   
 </body>
 </html>
