--- a/HTML5&CSS3/index.html
+++ b/HTML5&CSS3/index.html
@@ -8,7 +8,7 @@
   <title>HTML5&CSS3</title>
 </head>
 <body>
-  <div class="inputType">
+  <div class="inputType hide">
     <form action="">
       <input type="text">
       <input type="password">
@@ -38,6 +38,43 @@
       src="https://raw.githubusercontent.com/mdn/learning-area/master/html/forms/image-type-example/login.png">
       
     </form>
+  </div>
+  <div class="flexWrap">
+    <div class="initShape circle">圆形</div>
+    <div class="initShape radius">圆角</div>
+    <div class="initShape shadow"><p>阴影</p></div>
+  </div>
+  <div class="contentWrap">
+    <h2>鼠标悬浮查看效果</h2>
+    <div class="flexWrap">
+      <div class="initShape transformSkew">2D变形扭曲</div> 
+      <div class="initShape transformBig">2D变形放大</div>
+      <div class="initShape transformSmall">2D变形缩小</div>
+      <div class="initShape transformOffset">2D变形偏移</div> 
+      <div class="initShape transformRotate">2D变形旋转</div>  
+    </div>
+  </div> 
+  <div class="contentWrap">
+    <h2>鼠标悬浮查看效果</h2>
+    <div class="flexWrap">
+      <div class="transformWrap3D"><div class="initShape transform3DOffset">3D变形偏移</div></div>
+      <div class="transformWrap3D"><div class="initShape transform3DRotate">3D变形旋转</div></div>
+    </div>
+  </div>
+  <div class="contentWrap">
+    <h2>背景色线性渐变</h2>
+    <div class="flexWrap">
+      <div class="initShape backgroundGradient1">从上到下</div>
+      <div class="initShape backgroundGradient2">从左到右</div>
+      <div class="initShape backgroundGradient3">对角</div>
+      <div class="initShape backgroundGradient4">设定角度</div>
+      <div class="initShape backgroundGradient5">多种颜色</div>
+      <div class="initShape backgroundGradient6">使用透明色</div>
+      <div class="initShape backgroundGradient7">径向渐变</div>
+      <div class="initShape backgroundGradient8">径向渐变颜色比例</div>
+      <div class="initShape backgroundGradient9">径向渐变circle</div>
+      <div class="initShape backgroundGradient10">精致例子</div>
+    </div>
   </div>
 </body>
 </html>
