--- a/HTML5&CSS3/index.html
+++ b/HTML5&CSS3/index.html
@@ -76,5 +76,14 @@
       <div class="initShape backgroundGradient10">精致例子</div>
     </div>
   </div>
+  <div class="contentWrap">
+    <h2>过渡效果</h2>
+    <div class="flexWrap trbg">
+      <div class="initButton success">成功</div>
+      <div class="initButton error">错误</div>
+      <div class="initButton warning">警告</div>
+      <div class="initButton info">通知</div>
+    </div>
+  </div>
 </body>
 </html>
